navbar z-index adjusted for correct click on form

--- a/styles/general.css
+++ b/styles/general.css
@@ -8,13 +8,13 @@
     background-repeat:  no-repeat;
     background-attachment: local;
     background-size: cover;
-    z-index: -2;
+    z-index: 0;
 }
 
 .banner::after{
     content: "";
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     width: 100%;
     height: 100%;
     background-color: #1891cdb3;
@@ -26,6 +26,7 @@
     height: 64px;
     background-color: rgba(255, 255, 255, 0.4);
     box-shadow: inset 0 0 5px 0 white;
+    z-index: 1;
 }
 
 #navbarMenu.is-active {
